Fix alignment of search buttons

--- a/public/assets/styles/components/inquire.css
+++ b/public/assets/styles/components/inquire.css
@@ -35,6 +35,7 @@
 
   & button,
   & ::part(button) {
+    align-items: center;
     background-color: white;
     border: var(--line-solid);
     box-shadow: inset 0 -1px 0 var(--color-neutral-dark-alpha);
